added 5 use case scenarios

--- a/index.html
+++ b/index.html
@@ -10,6 +10,23 @@
     <title>Project Name</title>
   </head>
   <body>
-    <h1 class="text-experiment">Project Name</h1>
+    <header class="h1-container">
+      <section class="h1-class">
+        <h1 class="text-experiment">map() and set() use cases</h1>
+      </section>
+    </header>
+
+    <p>
+      Lorem ipsum, dolor sit amet consectetur adipisicing elit. Perferendis
+      commodi exercitationem alias voluptates nisi mollitia repellendus esse
+      expedita numquam, laborum, unde similique nam labore soluta sed eum ipsa
+      eveniet rem.
+    </p>
+    <p>
+      Lorem ipsum, dolor sit amet consectetur adipisicing elit. Perferendis
+      commodi exercitationem alias voluptates nisi mollitia repellendus esse
+      expedita numquam, laborum, unde similique nam labore soluta sed eum ipsa
+      eveniet rem.
+    </p>
   </body>
 </html>
